# addon-datastore

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  README.md  convertAddonManifest.py  discussions.json  getData.js  new specialCharacter.json  nvdaAPIVersions.json  output.md  pyproject.toml  radyocu.json  remove-codeql-keys.sh  reviewedAddons.json  runlint.bat  rununittests.bat  rununittests.sh  specialCharacter.json  submitters.json  submitters.old.json  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: registerAddon.yml
.github/workflows/: getData.js  (+29 more)
_tests/: test_validate.py
_tools/: 21.02.json  addonVersion_schema.json  sha256.py  validate.py
_validate/: regenerateJson.py
addons/: 2.0.0.json  audioExtractor.json  fastFileSearch.json  kurum-rehberi.json  specialCharacter.json
climaspeak/: 2026.3.19.json  2026.3.20.json
submissions/: ojsMonitor.json  radyocu.json
transform/: .gitattributes  .gitignore  NVDAVersions.json  README.md  flake8.ini  nvdaAPIVersions.json  requirements.txt  tox.ini
validation/: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  regenerateJson.bat  regenerateTranslations.bat  regenerateTranslations.ps1  requirements.txt  runValidate.bat  runcreatejson.bat  runcreatejson.ps1  runlint.bat  runlint.ps1  runsha.bat  runsha.ps1  runtox.bat  rununittests.bat  runvalidate.bat  runvalidate.ps1  testValidate.bat  tox.ini
validation/.github/workflows/: testCode.yaml  testValidate.yaml
validation/_tests/: __init__.py  test_createJson.py  test_majorMinorPatch.py  test_validate.py
validation/_tests/testData/: fake.nvda-addon  manifest.ini  nvdaAPIVersions.json
validation/_tests/testData/addons/fake/: 13.0.0.json  13.0.json
validation/_validate/: addonManifest.py  addonVersion_schema.json  createJson.py  majorMinorPatch.py  manifestLoader.py  regenerateJson.py  regenerateTranslations.py  sha256.py  validate.py
validation/_validate/include/configobj/: .editorconfig
validation/clipContentsDesigner/: 13.0.json  manifest.ini
validation/tests/: test_createJson.py  test_majorMinorPatch.py  test_validate.py
validation/tests/testData/: fake.nvda-addon  manifest.ini  nvdaAPIVersions.json
validation/tests/testData/addons/fake/: 13.0.0.json
validation/venvUtils/: ensureAndActivate.bat  ensureAndActivate.ps1  ensureVenv.py  venvCmd.bat  venvCmd.ps1
(+44478 files in other folders)
